--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,9 +3,148 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>Jacob Humrich</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <link type="text/css" rel="stylesheet" th:href="@{/style.css}"/>
+        <script type="text/javascript">
+            
+                
+            var counter = 0;
+            function getWeatherDemo(o){
+                var items = o.query.results.channel;
+                var currentOut = '';
+                var temp = items.item.condition.temp;
+                var text = items.item.condition.text;
+                var daysInForcast = items.item.forecast.length;
+                var location = items.location;
+                currentOut += "<h1>" + location.city + ", " + location.region + "</h1>";
+                currentOut += "<p>The current conditions are: " + temp + " and "+ text + "</p>";
+                var forecastOut = '';
+                
+                //sets the div for the location and the current 
+                var div = document.createElement("div");
+                div.setAttribute("id", location.city);
+                div.innerHTML = currentOut;
+                var main = document.getElementById('forecast');
+                main.appendChild(div);
+                
+                //sets the div for the 10 day forcast for the location
+                div = document.createElement("div");
+                div.setAttribute("id", "forecast" + location.city);
+                
+                if(daysInForcast > 5)
+                    daysInForcast = 5;
+                
+                for(var i = 0; i < daysInForcast; i++){
+                    var date = items.item.forecast[i].date;
+                    var day = items.item.forecast[i].day;
+                    var high = items.item.forecast[i].high;
+                    var low = items.item.forecast[i].low;
+                    var dayDiv = document.createElement("div");
+                    var img = document.createElement("img");
+                    
+                    text = items.item.forecast[i].text;
+                    forecastOut = "<h3>" + day + " " + date + "</h3>" + "<p>High of " + high + "&#176" + "</p><p>Low of " + low + "&#176" + "</p><p>" + text + "</p>"; 
+                    img.src = "https://s.yimg.com/os/weather/1.0.1/shadow_icon/60x60/" + text + "_day_night@2x.png";
+                    dayDiv.setAttribute("id", date);
+                    dayDiv.setAttribute("class", "date");
+                    dayDiv.innerHTML = forecastOut;
+                    div.appendChild(dayDiv);
+                    
+                }
+                
+                main.appendChild(div);
+            }
+            
+            function images(conditionCodes){
+                
+                new map ([0	tornado],
+            1	tropical storm
+            2	hurricane
+            3	severe thunderstorms
+            4	thunderstorms
+            5	mixed rain and snow
+            6	mixed rain and sleet
+            7	mixed snow and sleet
+            8	freezing drizzle
+            9	drizzle
+            10	freezing rain
+            11	showers
+            12	showers
+            13	snow flurries
+            14	light snow showers
+            15	blowing snow
+            16	snow
+            17	hail
+            18	sleet
+            19	dust
+            20	foggy
+            21	haze
+            22	smoky
+            23	blustery
+            24	windy
+            25	cold
+            26	cloudy
+            27	mostly cloudy (night)
+            28	mostly cloudy (day)
+            29	partly cloudy (night)
+            30	partly cloudy (day)
+            31	clear (night)
+            32	sunny
+            33	fair (night)
+            34	fair (day)
+            35	mixed rain and hail
+            36	hot
+            37	isolated thunderstorms
+            38	scattered thunderstorms
+            39	scattered thunderstorms
+            40	scattered showers
+            41	heavy snow
+            42	scattered snow showers
+            43	heavy snow
+            44	partly cloudy
+            45	thundershowers
+            46	snow showers
+            47	isolated thundershowers
+                if(clouds == "Mostly Cloudy")
+                    return "mostly_cloudy";
+                else if(clouds == "Mostly Cloudy")
+                    return "mostly_cloudy";
+                else if(clouds == "Mostly Cloudy")
+                    return "mostly_cloudy";
+                else if(clouds == "Mostly Cloudy")
+                    return "mostly_cloudy";
+                else if(clouds == "Mostly Cloudy")
+                    return "mostly_cloudy";
+            }
+            
+        </script>
     </head>
+    
     <body>
         <h1>Welcome to my website.</h1>
         I set this up to showcase some of my skills.
+        <div id='forecast'></div>
+        <img src="https://s.yimg.com/os/weather/1.0.1/shadow_icon/60x60/mostly_cloudy_day_night@2x.png"/>
+                  https://s.yimg.com/os/weather/1.0.1/shadow_icon/60x60/clear_day@2x.png
+        <!-- Weather for Strawberry, CA -->
+        <script src='https://query.yahooapis.com/v1/public/yql?q=select * from weather.forecast where woeid in (select woeid from geo.places(1) where woeid="23510249")&format=json&callback=getWeatherDemo'> </script>
+        
+        <!-- Weather for Bear Valley, CA -->
+        <script src='https://query.yahooapis.com/v1/public/yql?q=select * from weather.forecast where woeid in (select woeid from geo.places(1) where woeid="2360750")&format=json&callback=getWeatherDemo'> </script>
+        
+        <!-- Weather for Heavenly, CA -->
+        <script src='https://query.yahooapis.com/v1/public/yql?q=select * from weather.forecast where woeid in (select woeid from geo.places(1) where woeid="28718499")&format=json&callback=getWeatherDemo'> </script>
+        
+        <!-- Weather for Kirkwood, CA -->
+        <script src='https://query.yahooapis.com/v1/public/yql?q=select * from weather.forecast where woeid in (select woeid from geo.places(1) where woeid="2433131")&format=json&callback=getWeatherDemo'> </script>
+        
+        <!-- Weather for North Star, CA -->
+        <script src='https://query.yahooapis.com/v1/public/yql?q=select * from weather.forecast where woeid in (select woeid from geo.places(1) where woeid="91987108
+")&format=json&callback=getWeatherDemo'> </script>
+        
+        <!-- Weather for Newark, CA -->
+        <script src='https://query.yahooapis.com/v1/public/yql?q=select * from weather.forecast where woeid in (select woeid from geo.places(1) where woeid="2459268
+")&format=json&callback=getWeatherDemo'> </script>
+    
     </body>
 </html>
