--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,15 @@
         <link type="text/css" rel="stylesheet" th:href="@{/style.css}"/>
         <script type="text/javascript">
             
-                
+            var conditionsMap =  new Map([
+                [0, '@{//C0_tornado.png}']
+                ]);
+            /*, [1, "@{/C1_tropical_storm.png}"], [2, "@{/C2_hurricane.png}"], [3, "@{/C4_thunderstorms.png}"], [4, "@{/C4_thunderstorms.png}"], [5, "@{/C5_rain_snow.png}"], [6, "@{/C5_rain_snow.png}"], [7, "@{/C7_snow_sleet.png}"], [8, "@{/C8_freezing_drizzle.png}"], [9, "@{/C8_freezing_drizzle.png}"], 
+                [10, "@{/C10_freezing_rain.png}"], [11, "@{/C11_showers.png}"], [12, "@{/C12_hail.png}"], [13, "@{/C16_snow.png}"], [14, "@{/C16_snow.png}"], [15, "@{/C16_snow.png}"], [16, "@{/C16_snow.png}"], [17, "@{/C17_hail.png}"], [18, "@{/C18_sleet.png}"], [19, "@{/C19_dust.png}"], 
+                [20, "@{/C20_foggy.png}"], [21, "@{/C21_haze.png}"], [22, "@{/C22_smoky.png}"], [23, "@{/C23_blustery.png}"], [24, "@{/C24_windy.png}"], [25, "@{/C25_cold.png}"], [26, "@{/C26_cloudy.png}"], [27, "@{/C27_mostly_cloudy_night.png}"], [28, "@{/C28_mostly_cloudy.png}"], [29, "@{/C29_partly_cloudy_night.png}"], 
+                [30, "@{/C30_partly_cloudy_day.png}"], [31, "@{/C31_clear_night.png}"], [32, "@{/C32_sunny.png}"], [33, "@{/C31_clear_night.png}"], [34, "@{/C32_sunny.png}"], [35, "@{/C17_hail.png}"], [36, "@{/C36_hot.png}"], [37, "@{/C4_thunderstorms.png}"], [38, "@{/C4_thunderstorms.png}"], [39, "@{/C4_thunderstorms.png}"], 
+                [40, "@{/C11_showers.png}"], [41, "@{/C16_snow.png}"], [42, "@{/C16_snow.png}"], [43, "@{/C16_snow.png}"], [44, "@{/C26_cloudy.png}"], [45, "@{/C4_thunderstorms.png}"], [46, "@{/C16_snow.png}"], [47, "@{/C47_isolated_thundershowers.png}"], [3200, "@{/C3200_not_avalible.png}"]);
+              */  
             var counter = 0;
             function getWeatherDemo(o){
                 var items = o.query.results.channel;
@@ -44,7 +52,8 @@
                     
                     text = items.item.forecast[i].text;
                     forecastOut = "<h3>" + day + " " + date + "</h3>" + "<p>High of " + high + "&#176" + "</p><p>Low of " + low + "&#176" + "</p><p>" + text + "</p>"; 
-                    img.src = "https://s.yimg.com/os/weather/1.0.1/shadow_icon/60x60/" + text + "_day_night@2x.png";
+                    //img.src = images(items.item.forecast[i].code);
+                    img.src = images(0);
                     dayDiv.setAttribute("id", date);
                     dayDiv.setAttribute("class", "date");
                     dayDiv.innerHTML = forecastOut;
@@ -56,65 +65,7 @@
             }
             
             function images(conditionCodes){
-                
-                new map ([0	tornado],
-            1	tropical storm
-            2	hurricane
-            3	severe thunderstorms
-            4	thunderstorms
-            5	mixed rain and snow
-            6	mixed rain and sleet
-            7	mixed snow and sleet
-            8	freezing drizzle
-            9	drizzle
-            10	freezing rain
-            11	showers
-            12	showers
-            13	snow flurries
-            14	light snow showers
-            15	blowing snow
-            16	snow
-            17	hail
-            18	sleet
-            19	dust
-            20	foggy
-            21	haze
-            22	smoky
-            23	blustery
-            24	windy
-            25	cold
-            26	cloudy
-            27	mostly cloudy (night)
-            28	mostly cloudy (day)
-            29	partly cloudy (night)
-            30	partly cloudy (day)
-            31	clear (night)
-            32	sunny
-            33	fair (night)
-            34	fair (day)
-            35	mixed rain and hail
-            36	hot
-            37	isolated thunderstorms
-            38	scattered thunderstorms
-            39	scattered thunderstorms
-            40	scattered showers
-            41	heavy snow
-            42	scattered snow showers
-            43	heavy snow
-            44	partly cloudy
-            45	thundershowers
-            46	snow showers
-            47	isolated thundershowers
-                if(clouds == "Mostly Cloudy")
-                    return "mostly_cloudy";
-                else if(clouds == "Mostly Cloudy")
-                    return "mostly_cloudy";
-                else if(clouds == "Mostly Cloudy")
-                    return "mostly_cloudy";
-                else if(clouds == "Mostly Cloudy")
-                    return "mostly_cloudy";
-                else if(clouds == "Mostly Cloudy")
-                    return "mostly_cloudy";
+                return conditionsMap.get(conditionCodes);
             }
             
         </script>
