--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,14 +8,18 @@
         <script type="text/javascript">
             
             var conditionsMap =  new Map([
-                [0, '@{//C0_tornado.png}']
-                ]);
-            /*, [1, "@{/C1_tropical_storm.png}"], [2, "@{/C2_hurricane.png}"], [3, "@{/C4_thunderstorms.png}"], [4, "@{/C4_thunderstorms.png}"], [5, "@{/C5_rain_snow.png}"], [6, "@{/C5_rain_snow.png}"], [7, "@{/C7_snow_sleet.png}"], [8, "@{/C8_freezing_drizzle.png}"], [9, "@{/C8_freezing_drizzle.png}"], 
-                [10, "@{/C10_freezing_rain.png}"], [11, "@{/C11_showers.png}"], [12, "@{/C12_hail.png}"], [13, "@{/C16_snow.png}"], [14, "@{/C16_snow.png}"], [15, "@{/C16_snow.png}"], [16, "@{/C16_snow.png}"], [17, "@{/C17_hail.png}"], [18, "@{/C18_sleet.png}"], [19, "@{/C19_dust.png}"], 
-                [20, "@{/C20_foggy.png}"], [21, "@{/C21_haze.png}"], [22, "@{/C22_smoky.png}"], [23, "@{/C23_blustery.png}"], [24, "@{/C24_windy.png}"], [25, "@{/C25_cold.png}"], [26, "@{/C26_cloudy.png}"], [27, "@{/C27_mostly_cloudy_night.png}"], [28, "@{/C28_mostly_cloudy.png}"], [29, "@{/C29_partly_cloudy_night.png}"], 
-                [30, "@{/C30_partly_cloudy_day.png}"], [31, "@{/C31_clear_night.png}"], [32, "@{/C32_sunny.png}"], [33, "@{/C31_clear_night.png}"], [34, "@{/C32_sunny.png}"], [35, "@{/C17_hail.png}"], [36, "@{/C36_hot.png}"], [37, "@{/C4_thunderstorms.png}"], [38, "@{/C4_thunderstorms.png}"], [39, "@{/C4_thunderstorms.png}"], 
-                [40, "@{/C11_showers.png}"], [41, "@{/C16_snow.png}"], [42, "@{/C16_snow.png}"], [43, "@{/C16_snow.png}"], [44, "@{/C26_cloudy.png}"], [45, "@{/C4_thunderstorms.png}"], [46, "@{/C16_snow.png}"], [47, "@{/C47_isolated_thundershowers.png}"], [3200, "@{/C3200_not_avalible.png}"]);
-              */  
+                [0, '/conditions/C17_hail.png'], [1, "/conditions/C1_tropical_storm.png"], [2, "/conditions/C2_hurricane.png"], [3, "/conditions/C4_thunderstorms.png"], [4, "/conditions/C4_thunderstorms.png"], 
+                [5, "/conditions/C5_rain_snow.png"], [6, "/conditions/C5_rain_snow.png"], [7, "/conditions/C7_snow_sleet.png"], [8, "/conditions/C8_freezing_drizzle.png"], [9, "/conditions/C8_freezing_drizzle.png"], 
+                [10, "/conditions/C10_freezing_rain.png"], [11, "/conditions/C11_showers.png"], [12, "/conditions/C12_hail.png"], [13, "/conditions/C16_snow.png"], [14, "/conditions/C16_snow.png"], 
+                [15, "/conditions/C16_snow.png"], [16, "/conditions/C16_snow.png"], [17, "/conditions/C17_hail.png"], [18, "/conditions/C18_sleet.png"], [19, "/conditions/C19_dust.png"], 
+                [20, "/conditions/C20_foggy.png"], [21, "/conditions/C21_haze.png"], [22, "/conditions/C22_smoky.png"], [23, "/conditions/C23_blustery.png"], [24, "/conditions/C24_windy.png"], 
+                [25, "/conditions/C25_cold.png"], [26, "/conditions/C26_cloudy.png"], [27, "/conditions/C27_mostly_cloudy_night.png"], [28, "/conditions/C28_mostly_cloudy.png"], [29, "/conditions/C29_partly_cloudy_night.png"], 
+                [30, "/conditions/C30_partly_cloudy_day.png"], [31, "/conditions/C31_clear_night.png"], [32, "/conditions/C32_sunny.png"], [33, "/conditions/C31_clear_night.png"], [34, "/conditions/C32_sunny.png"], 
+                [35, "/conditions/C17_hail.png"], [36, "/conditions/C36_hot.png"], [37, "/conditions/C4_thunderstorms.png"], [38, "/conditions/C4_thunderstorms.png"], [39, "/conditions/C4_thunderstorms.png"], 
+                [40, "/conditions/C11_showers.png"], [41, "/conditions/C16_snow.png"], [42, "/conditions/C16_snow.png"], [43, "/conditions/C16_snow.png"], [44, "/conditions/C26_cloudy.png"], 
+                [45, "/conditions/C4_thunderstorms.png"], [46, "/conditions/C16_snow.png"], [47, "/conditions/C47_isolated_thundershowers.png"], [3200, "/conditions/C3200_not_avalible.png"]
+            ]);
+              
             var counter = 0;
             function getWeatherDemo(o){
                 var items = o.query.results.channel;
@@ -52,11 +56,12 @@
                     
                     text = items.item.forecast[i].text;
                     forecastOut = "<h3>" + day + " " + date + "</h3>" + "<p>High of " + high + "&#176" + "</p><p>Low of " + low + "&#176" + "</p><p>" + text + "</p>"; 
-                    //img.src = images(items.item.forecast[i].code);
-                    img.src = images(0);
+                    
+                    img.src = images(items.item.forecast[i].code);
                     dayDiv.setAttribute("id", date);
                     dayDiv.setAttribute("class", "date");
                     dayDiv.innerHTML = forecastOut;
+                    dayDiv.appendChild(img);
                     div.appendChild(dayDiv);
                     
                 }
@@ -65,7 +70,10 @@
             }
             
             function images(conditionCodes){
-                return conditionsMap.get(conditionCodes);
+                console.log(typeof conditionCodes);
+                console.log(conditionCodes);
+                console.log(parseInt(conditionCodes));
+                return conditionsMap.get(parseInt(conditionCodes));
             }
             
         </script>
@@ -75,8 +83,7 @@
         <h1>Welcome to my website.</h1>
         I set this up to showcase some of my skills.
         <div id='forecast'></div>
-        <img src="https://s.yimg.com/os/weather/1.0.1/shadow_icon/60x60/mostly_cloudy_day_night@2x.png"/>
-                  https://s.yimg.com/os/weather/1.0.1/shadow_icon/60x60/clear_day@2x.png
+                  
         <!-- Weather for Strawberry, CA -->
         <script src='https://query.yahooapis.com/v1/public/yql?q=select * from weather.forecast where woeid in (select woeid from geo.places(1) where woeid="23510249")&format=json&callback=getWeatherDemo'> </script>
         
