Created snowReport.html moved snow report info from home to snowReport added class map in style.css

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -149,3 +149,11 @@ div.date{
         padding: 3px;
         margin: 3px;
 }
+
+.map{
+    width: 33%;
+    frameborder: o;
+    height: 35vh;
+    border: 0;
+    
+}
