--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,6 +11,8 @@
     </head>
     
     <body>
-        
+        <form action = "/snowreport" method ="get">
+            <input type="submit" value="Snow Report" />
+        </form>
     </body>
 </html>
