--- a/src/main/resources/templates/examples.html
+++ b/src/main/resources/templates/examples.html
@@ -1,32 +1,25 @@
-<%-- 
-    Document   : examples
-    Created on : Aug 10, 2018, 10:56:30 AM
-    Author     : IT
---%>
-
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/styles/jhumrich.css"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
+        <link type="text/css" rel="stylesheet" th:href="@{/style.css}"/>
         <title>Examples</title>
     </head>
     <body>
-        <div><%@ include file="header.html" %></div>
+        <div></div>
         <div class="container">
             <h1>Example Projects</h1>
             <div>
                 <h3>Java</h3>
 				<ul>
-					<li><a href="${pageContext.request.contextPath}/fulfilment.jsp">Fulfilment System</a></li>
+					<li><a th:href="@{fulfillment}">Fulfillment System</a></li>
 				</ul>
             </div>
             <div>
                 <h3>Web app</h3>
 				<ul>
-					<li><a href="${pageContext.request.contextPath}/Calculator.jsp">A simple Calculator</a></li>
-					<li><a href="${pageContext.request.contextPath}/Sudoku.jsp">Sudoku</a></li>
+					<li><a th:href="@{Calculator}">A simple Calculator</a></li>
+					<li><a th:href="@{sudoku}">Sudoku</a></li>
 				</ul>
             </div><!--
             <div>
@@ -44,6 +37,6 @@
 				</ul>
             </div> -->
         </div>
-		<div><%@ include file="footer.html" %></div>
+		<div></div>
     </body>
 </html>
