--- a/src/main/resources/templates/snowreport.html
+++ b/src/main/resources/templates/snowreport.html
@@ -5,14 +5,14 @@
         <title>Jacob Humrich</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link type="text/css" rel="stylesheet" th:href="@{/style.css}"/>
-        <script th:src="@{/snowreport.js}">
+        <script>
             
         </script>
     </head>
     
-    <body onload="start()">
+    <body>
         <h1>Weather of my favorite snowboarding places.</h1>
-        
+        <div>Testing the modelandview th:text="${message}"</div>
 
         
     </body>
